--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "require": "./dist/javascript-interface-library.js",
     "import": "./dist/javascript-interface-library.esm.js"
   },
+  "types": "./dist/javascript-interface-library.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && rm src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
