--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "javascript-interface-library",
   "version": "0.1.3",
   "description": "various classification, validation and utility functions",
-  "main": "./dist/javascript-interface-library.js",
+  "main":   "./dist/javascript-interface-library.js",
   "module": "./dist/javascript-interface-library.esm.js",
+  "sideEffects": false,
   "exports": {
     "require": "./dist/javascript-interface-library.js",
     "import": "./dist/javascript-interface-library.esm.js"
@@ -11,6 +12,7 @@
   "types": "./dist/javascript-interface-library.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && rm src/*.js",
+    "agadoo":"agadoo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +36,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "agadoo": "^2.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
