--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "types": "./dist/javascript-interface-library.d.ts",
   "exports": {
     "require": "./dist/javascript-interface-library.js",
-    "import": "./dist/javascript-interface-library.esm.js"
+    "import": "./dist/javascript-interface-library.esm.js",
+    "package.json": "./package.json"
   },
   "scripts": {
     "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && rm src/*.js",
