--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "various classification, validation and utility functions",
   "main": "./dist/javascript-interface-library.js",
   "module": "./dist/javascript-interface-library.esm.js",
-  "svelte": "./dist/javascript-interface-library.esm.js",
+  "svelte": "./dist/javascript-interface-library.svelte.js",
   "types": "./dist/javascript-interface-library.d.ts",
   "exports": {
     "require": "./dist/javascript-interface-library.js",
@@ -12,7 +12,7 @@
     "package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && rm src/*.js",
+    "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && mv src/*.js ./dist/javascript-interface-library.svelte.js",
     "agadoo": "agadoo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
