--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "javascript-interface-library",
   "version": "0.1.12",
   "description": "various classification, validation and utility functions",
+  "type": "module",
   "main": "./dist/javascript-interface-library.js",
   "module": "./dist/javascript-interface-library.esm.js",
-  "svelte": "./dist/javascript-interface-library.svelte.js",
+  "svelte": "./dist/javascript-interface-library.esm.js",
   "types": "./dist/javascript-interface-library.d.ts",
   "exports": {
-    "require": "./dist/javascript-interface-library.js",
-    "import": "./dist/javascript-interface-library.esm.js",
-    "package.json": "./package.json"
+    ".": {
+      "require": "./dist/javascript-interface-library.js",
+      "import": "./dist/javascript-interface-library.esm.js"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && mv src/*.js ./dist/javascript-interface-library.svelte.js",
+    "build": "rimraf dist && tsc && rollup -c rollup.config.js && mv src/*.d.ts dist && rm src/*.js*",
     "agadoo": "agadoo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,8 +37,6 @@
   },
   "homepage": "https://github.com/rozek/javascript-interface-library#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "agadoo": "^2.0.0",
     "rimraf": "^3.0.2",
