--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "types": "./dist/javascript-interface-library.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/javascript-interface-library.js",
+      "require": "./dist/javascript-interface-library.cjs",
       "import": "./dist/javascript-interface-library.esm.js"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.js && tsc && mv src/*.d.ts dist && rm src/*.js*",
+    "build": "rimraf dist && rollup -c rollup.config.js && tsc && mv src/*.d.ts dist && rm src/*.js* && cp ./dist/javascript-interface-library.js ./dist/javascript-interface-library.cjs",
     "agadoo": "agadoo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -42,6 +42,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^4.3.3"
   }
 }
