--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "types": "./dist/javascript-interface-library.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/javascript-interface-library.cjs",
+      "require": "./dist/javascript-interface-library.js",
       "import": "./dist/javascript-interface-library.esm.js"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.js && tsc && mv src/*.d.ts dist && rm src/*.js* && cp ./dist/javascript-interface-library.js ./dist/javascript-interface-library.cjs",
+    "build": "rimraf dist && rollup -c rollup.config.js && tsc && mv src/*.d.ts dist && rm src/*.js*",
     "agadoo": "agadoo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
