--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "javascript-interface-library",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "various classification, validation and utility functions",
-  "type": "module",
-  "main": "./dist/javascript-interface-library.js",
+  "main":   "./dist/javascript-interface-library.umd.js",
+  "browser":"./dist/javascript-interface-library.umd.js",
   "module": "./dist/javascript-interface-library.esm.js",
   "svelte": "./dist/javascript-interface-library.esm.js",
-  "types": "./dist/javascript-interface-library.d.ts",
+  "types":  "./dist/javascript-interface-library.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/javascript-interface-library.js",
+      "require":"./dist/javascript-interface-library.umd.js",
+      "browser":"./dist/javascript-interface-library.umd.js",
       "import": "./dist/javascript-interface-library.esm.js",
       "types": "./dist/javascript-interface-library.d.ts"
     },
@@ -39,10 +40,10 @@
   "homepage": "https://github.com/rozek/javascript-interface-library#readme",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "agadoo": "^2.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.1",
-    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
     "typescript": "^4.3.3"
   }
